@@ -1,301 +1,187 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+<?xml version="1.0" encoding="UTF-8"?>
+<project xmlns="http://maven.apache.org/POM/4.0.0"
+	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
 	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
 	<modelVersion>4.0.0</modelVersion>
-	<groupId>privacy-optout-customer</groupId>
-	<artifactId>optout</artifactId>
-	<version>1.0.0</version>
-	<packaging>war</packaging>
-	<name>customer</name>
-	<url>http://maven.apache.org</url>
-	<repositories>
-		<repository>
-                        <id>central</id>
-                        <name>java-libs-prod</name>
-                        <url>https://artifactory.crbgf.net/artifactory/java-libs-prod</url>
-                </repository>
-                <repository>
-                        <id>jfrog-maven-thirdparty</id>
-                        <name>java-libs-prod</name>
-                        <url>https://artifactory.crbgf.net/artifactory/java-libs-prod</url>
-                </repository>
-                <repository>
-                        <id>snapshots</id>
-                        <name>java-libs-prod</name>
-                        <url>https://artifactory.crbgf.net/artifactory/java-libs-prod/</url>
-                </repository>
-        </repositories>
-	<pluginRepositories>
- 
-		<pluginRepository>
-			<id>spring-releases</id>
-			<url>https://artifactory.crbgf.net/artifactory/plugins-release</url>
-		</pluginRepository>
-		<pluginRepository>
-			<id>snapshots</id>
-			<name>java-libs-prod</name>
-			<url>https://artifactory.crbgf.net/artifactory/java-libs-prod/</url>
-		</pluginRepository>
-	</pluginRepositories>
- 
-	
- 
+
+	<groupId>com.aig.life.billing.services</groupId>
+	<artifactId>life-billing-RCC-transaction-monitoring-listener</artifactId>
+	<version>0.0.1-SNAPSHOT</version>
+	<packaging>jar</packaging>
+
+	<name>life-microservice-billing-transaction-RCC-monitoring-service</name>
+	<description>Demo project for Spring Boot</description>
+
+	<parent>
+		<groupId>org.springframework.boot</groupId>
+		<artifactId>spring-boot-starter-parent</artifactId>
+		<version>2.3.10.RELEASE</version>
+		<relativePath /> <!-- lookup parent from repository -->
+	</parent>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
-		<java.version>17</java.version>
-		<project.build.timestamp>${maven.build.timestamp}</project.build.timestamp>
-		<!-- The Sonar Jacoco Listener for JUnit to extract coverage details per
+		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+		<java.version>1.8</java.version>
+		<!-- The Sonar Jacoco Listener for JUnit to extract coverage details per 
 			test -->
 		<sonar-jacoco-listeners.version>3.2</sonar-jacoco-listeners.version>
 		<!-- Jacoco version to use -->
-		<jacoco.version>0.8.8</jacoco.version>
+		<jacoco.version>0.8.0</jacoco.version>
 		<!-- Set Jacoco output directory to project build directory -->
 		<jacoco.outputDir>${project.build.directory}</jacoco.outputDir>
 		<!-- Jacoco output file for UTs -->
 		<jacoco.out.ut.file>jacoco-ut.exec</jacoco.out.ut.file>
-		<!-- Tells Sonar where the Jacoco coverage result file is located for Unit
+		<!-- Tells Sonar where the Jacoco coverage result file is located for Unit 
 			Tests -->
 		<sonar.jacoco.reportPath>${jacoco.outputDir}/${jacoco.out.ut.file}</sonar.jacoco.reportPath>
 	</properties>
-	<dependencies>
-		<!--<dependency>
-			<groupId>org.apache.openejb</groupId>
-			<artifactId>apache-tomee</artifactId>
-			<version>1.7.4</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-beanutils</groupId>
-					<artifactId>commons-beanutils-core</artifactId>
-				</exclusion>
-			<exclusion>
-	                      <groupId>net.sf.jasperreports</groupId>
-                              <artifactId>jasperreports</artifactId>
-                        </exclusion>
- 
- 
-			
-				<exclusion>
-					<groupId>commons-beanutils</groupId>
-					<artifactId>commons-beanutils-core</artifactId>
-				</exclusion>
-				
-				<exclusion>
-					<groupId>com.lowagie</groupId>
-					<artifactId>itext</artifactId>
-				</exclusion>
-			</exclusions>
-		</dependency>-->
-		<!-- Security remediation change starts here -->
-		<dependency>
-			<groupId>xerces</groupId>
-			<artifactId>xercesImpl</artifactId>
-			<version>2.12.2</version>
-		</dependency>
-		<!-- Security remediation change ends here -->
-		<dependency>
-			<groupId>com.aig.internetlib</groupId>
-			<artifactId>com.ibm.ws.webservices.thinclient</artifactId>
-			<version>6.1.0</version>
-		</dependency>
-		<dependency>
-			<groupId>com.oracle</groupId>
-			<artifactId>ojdbc6</artifactId>
-			<version>11.2.0</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.springframework/spring-web -->
- 
-		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-web</artifactId>
-			<version>6.1.15</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/org.apache.activemq/activemq-client -->
-		<dependency>
-			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-client</artifactId>
-			<version>5.18.4</version>
-		</dependency>
-		<!-- https://mvnrepository.com/artifact/com.fasterxml.jackson.core/jackson-databind -->
-		<dependency>
-			<groupId>com.fasterxml.jackson.core</groupId>
-			<artifactId>jackson-databind</artifactId>
-			<version>2.14.2</version>
-		</dependency>
-		<dependency>
-    <groupId>jakarta.servlet</groupId>
-    <artifactId>jakarta.servlet-api</artifactId>
-    <version>6.1.0</version>
-    <scope>provided</scope>
-</dependency>
- 
-		<dependency>
-			<groupId>com.aigag.sharedcode</groupId>
-			<artifactId>sharedcode</artifactId>
-			<version>1.0.1</version>
-		</dependency>
-		<dependency>
-    <groupId>org.projectlombok</groupId>
-    <artifactId>lombok</artifactId>
-    <version>1.18.22</version>
-    <scope>provided</scope>
-</dependency>
- 
- 
-<dependency>
-			<groupId>jakarta.servlet.jsp.jstl</groupId>
-			<artifactId>jakarta.servlet.jsp.jstl-api</artifactId>
-			<version>3.0.0</version>
-			
-		</dependency>
-		<dependency>
-			<groupId>org.glassfish.web</groupId>
-			<artifactId>jakarta.servlet.jsp.jstl</artifactId>
-			<version>3.0.0</version>
-		</dependency>
 
-  
- <!--<dependency>
-			<groupId>com.jhlabs.simplecaptcha</groupId>
-			<artifactId>simplecaptcha</artifactId>
-			<version></version>
-		</dependency>-->
-		
-		<!--<dependency>
-		    <groupId>org.apache.standard</groupId>
-		    <artifactId>standard</artifactId>
-		    <version>1.1.0</version>
-		</dependency> -->
-		<!--<dependency>
-			<groupId>org.apache.taglibs</groupId>
-			<artifactId>taglibs-standard-spec</artifactId>
-			<version>1.2.1</version>
-		</dependency>-->
-		  <dependency>
-    <groupId>nl.captcha</groupId>
-    <artifactId>simplecaptcha</artifactId>
-    <version>2.0.0</version>
-</dependency>
-		<!--<dependency>
-			<groupId>org.apache.taglibs</groupId>
-			<artifactId>taglibs-standard-impl</artifactId>
-			<version>1.2.1</version>
-		</dependency>-->
-		
-		<!-- https://mvnrepository.com/artifact/org.apache.xmlgraphics/xmlgraphics-commons -->
+	<dependencies>
 		<dependency>
-			<groupId>org.apache.xmlgraphics</groupId>
-			<artifactId>xmlgraphics-commons</artifactId>
-			<version>2.6</version>
-			<exclusions>
-				<exclusion>
-            			<groupId>commons-io</groupId>
-		    			<artifactId>commons-io</artifactId>
-          		</exclusion>
-			</exclusions>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-amqp</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>com.googlecode.web-commons</groupId>
-			<artifactId>web-common-service</artifactId>
-			<version>1.0.3</version>
+			<groupId>org.springframework.amqp</groupId>
+			<artifactId>spring-rabbit-junit</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>junit</groupId>
-			<artifactId>junit</artifactId>
-			<version>4.13.2</version>
-			<scope>test</scope>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.owasp.esapi</groupId>
-			<artifactId>esapi</artifactId>
-			<version>2.6.0.0</version>
-			<exclusions>
-				<exclusion>
-					<groupId>commons-beanutils</groupId>
-					<artifactId>commons-beanutils</artifactId>
-				</exclusion>
-				<exclusion>
-					<groupId>log4j</groupId>
-					<artifactId>log4j</artifactId>
-				</exclusion>
-			</exclusions>
+			<groupId>org.springframework.retry</groupId>
+			<artifactId>spring-retry</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.owasp.encoder</groupId>
-			<artifactId>encoder</artifactId>
-			<version>1.2.2</version>
+                        <groupId>org.apache.httpcomponents</groupId>
+                        <artifactId>httpcore</artifactId>
+                        <version>4.4.16</version>
+                </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>net.sourceforge.nekohtml</groupId>
-			<artifactId>nekohtml</artifactId>
-			<version>1.9.20</version>
+			<groupId>com.aig.lnr.dbp</groupId>
+			<artifactId>dbp-secrets-api</artifactId>
+			<version>3.0.0</version>
 		</dependency>
 		<dependency>
-			<groupId>com.google.code.gson</groupId>
-			<artifactId>gson</artifactId>
-			<version>2.10</version>
+			<groupId>org.apache.commons</groupId>
+			<artifactId>commons-lang3</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.tomcat</groupId>
-			<artifactId>tomcat-dbcp</artifactId>
-			<version>9.0.38</version>
-		</dependency>
-		
-		<dependency>
-			<groupId>org.owasp.antisamy</groupId>
-			<artifactId>antisamy</artifactId>
-			<version>1.7.5</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-batch</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>commons-codec</groupId>
-			<artifactId>commons-codec</artifactId>
-			<version>1.13</version>
+			<groupId>org.springframework.batch</groupId>
+			<artifactId>spring-batch-test</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.springframework</groupId>
-			<artifactId>spring-webmvc</artifactId>
-			<version>6.1.15</version>
+			<groupId>org.postgresql</groupId>
+			<artifactId>postgresql</artifactId>
+			<version>42.2.25</version>
+			<scope>runtime</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.activemq</groupId>
-			<artifactId>activemq-broker</artifactId>
-			<version>5.18.4</version>
+			<groupId>org.json</groupId>
+			<artifactId>json</artifactId>
+			<version>20180130</version>
 		</dependency>
 		<dependency>
 			<groupId>org.hsqldb</groupId>
 			<artifactId>hsqldb</artifactId>
-			<version>2.7.2</version>
+		</dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.httpcomponents</groupId>
-			<artifactId>httpclient</artifactId>
-			<version>4.5.13</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-json</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.fusesource.hawtjni</groupId>
-			<artifactId>hawtjni-runtime</artifactId>
-			<version>1.8</version>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
 		</dependency>
 		<dependency>
-			<groupId>org.fusesource.jansi</groupId>
-			<artifactId>jansi</artifactId>
-			<version>1.11</version>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-configuration-processor</artifactId>
+			<optional>true</optional>
 		</dependency>
 		<dependency>
-			<groupId>org.apache.logging.log4j</groupId>
-			<artifactId>log4j-api</artifactId>
-			<version>2.17.2</version>
+			<groupId>org.apache.tomcat.embed</groupId>
+			<artifactId>tomcat-embed-core</artifactId>
+			<version>9.0.58</version>
+		</dependency>
+		<!-- https://mvnrepository.com/artifact/org.springframework/spring-core -->
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-core</artifactId>
+			<version>5.3.12</version>
 		</dependency>
 		<dependency>
-		    <groupId>org.apache.logging.log4j</groupId>
-		    <artifactId>log4j-core</artifactId>
-		    <version>2.17.2</version>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-web</artifactId>
+			<version>5.3.12</version>
 		</dependency>
-		<dependency>   
-			<groupId>com.jhlabs</groupId>  
-			<artifactId>filters</artifactId>    
-			<version>2.0.235</version>  
-		</dependency>
+		<dependency>
+    <groupId>org.springframework.amqp</groupId>
+    <artifactId>spring-amqp</artifactId>
+    <version>2.2.22.RELEASE</version>
+</dependency>
+		
+		<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-core</artifactId>
+    <version>1.2.10</version>
+</dependency>
+<dependency>
+    <groupId>ch.qos.logback</groupId>
+    <artifactId>logback-classic</artifactId>
+    <version>1.2.10</version>
+</dependency>
 	</dependencies>
+
+	<build>
+		<plugins>
+			<plugin>
+				<groupId>org.springframework.boot</groupId>
+				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+		</plugins>
+
+	</build>
+
+	<repositories>
+		<repository>
+			<id>central</id>
+			<name>java-libs-prod</name>
+			<url>https://artifactory.crbgf.net/artifactory/java-libs-prod</url>
+		</repository>
+		<repository>
+		        <id>snapshots</id>
+		        <name>java-libs-prod</name>
+		        <url>https://artifactory.crbgf.net/artifactory/java-libs-prod/</url>
+		</repository>
+	</repositories>
+	
+	<pluginRepositories>
+		<pluginRepository>
+			<id>spring-releases</id>
+                        <url>https://artifactory.crbgf.net/artifactory/plugins-release</url>
+		</pluginRepository>
+		<pluginRepository>
+		        <id>snapshots</id>
+		        <name>java-libs-prod</name>
+		        <url>https://artifactory.crbgf.net/artifactory/java-libs-prod/</url>
+	        </pluginRepository>
+	</pluginRepositories>
+	
 	<profiles>
 		<profile>
 			<id>coverage</id>
@@ -305,18 +191,60 @@
 			<build>
 				<plugins>
 					<plugin>
-						<artifactId>maven-compiler-plugin</artifactId>
-						<version>3.8.1</version>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-surefire-plugin</artifactId>
 						<configuration>
-							<source>17</source>
-							<target>17</target>
+							<argLine>${jacoco.agent.ut.arg}</argLine>
+							<!-- Specific to generate mapping between tests and covered code -->
+							<properties>
+								<property>
+									<name>listener</name>
+									<value>org.sonar.java.jacoco.JUnitListener</value>
+								</property>
+							</properties>
+							<!-- test failure ignore -->
+							<testFailureIgnore>true</testFailureIgnore>
 						</configuration>
 					</plugin>
 					<plugin>
-    <groupId>org.apache.maven.plugins</groupId>
-    <artifactId>maven-war-plugin</artifactId>
-    <version>3.3.1</version>
-</plugin>
+						<groupId>org.apache.maven.plugins</groupId>
+						<artifactId>maven-failsafe-plugin</artifactId>
+						<configuration>
+							<argLine>-Xmx1024m -XX:MaxPermSize=256m ${jacoco.agent.it.arg}
+							</argLine>
+							<!-- Specific to generate mapping between tests and covered code -->
+							<properties>
+								<property>
+									<name>listener</name>
+									<value>org.sonar.java.jacoco.JUnitListener</value>
+								</property>
+							</properties>
+							<!-- Let's put failsafe reports with surefire to have access to tests 
+								failures/success reports in sonar -->
+							<reportsDirectory>${project.build.directory}/surefire-reports</reportsDirectory>
+						</configuration>
+					</plugin>
+					<plugin>
+						<groupId>org.jacoco</groupId>
+						<artifactId>jacoco-maven-plugin</artifactId>
+						<version>${jacoco.version}</version>
+						<executions>
+							<!-- Prepares a variable, jacoco.agent.ut.arg, that contains the info 
+								to be passed to the JVM hosting the code being tested. -->
+							<execution>
+								<id>prepare-ut-agent</id>
+								<phase>process-test-classes</phase>
+								<goals>
+									<goal>prepare-agent</goal>
+								</goals>
+								<configuration>
+									<destFile>${sonar.jacoco.reportPath}</destFile>
+									<propertyName>jacoco.agent.ut.arg</propertyName>
+									<append>true</append>
+								</configuration>
+							</execution>
+						</executions>
+					</plugin>
 				</plugins>
 			</build>
 			<dependencies>
